--- a/index.html
+++ b/index.html
@@ -18,7 +18,34 @@
     </div>
     <div class="task">
       <div class="item">
-        
+        <p>new house here</p>
+        <div class="item-btn">
+            <i class="fa-solid fa-pen-to-square"></i>
+            <i class="fa-solid fa-xmark"></i>
+        </div>
+      </div>
+      <div class="item">
+        <p>new house here</p>
+        <div class="item-btn">
+            <i class="fa-solid fa-pen-to-square"></i>
+            <i class="fa-solid fa-xmark"></i>
+        </div>
+      </div>
+      <div class="item">
+        <p>new house here</p>
+        <div class="item-btn">
+            <i class="fa-solid fa-pen-to-square"></i>
+            <i class="fa-solid fa-xmark"></i>
+        </div>
+      </div>
+      <div class="item">
+        <p>new house here</p>
+        <div class="item-btn">
+            <i class="fa-solid fa-pen-to-square"></i>
+            <i class="fa-solid fa-xmark"></i>
+        </div>
+      </div>
+      <div class="item">
         <p>new house here</p>
         <div class="item-btn">
             <i class="fa-solid fa-pen-to-square"></i>
